# OS

./: .dockerignore  .env.example  .env.sessions  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  PHILOSOPHY.md  PROTOCOLS.md  README.md  SESSION_COMPLETE.md  SESSION_COMPLETE_governance.md  SESSION_COMPLETE_layer0.md  Untitled.md  cloud.md  docker-compose.yml  install.sh  patch_pycord.py  pyproject.toml  requirements.txt  setup.sh  skills-lock.json
.claude/: CLAUDE.md  settings.json
.obsidian/: app.json  community-plugins.json  daily-notes.json  templates.json  types.json  workspace.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.playwright-mcp/: page-2026-03-31T20-07-12-999Z.yml
00_Dashboard/: Clients.md  Content.md.md  Home.md  Home.md.md  Sales.md
01_Inbox/: Raw Notes.md
03_CRM/: Pipeline.md  README.md
04_Offers/: Initiate Arena.md
06_Skills/: _archived_skills_index.md
10_Wiki/: LAYER_3.1_SOVEREIGNTY_CLEANUP.md  LAYER_3_UNIFIED_ARCHITECTURE.md  SOVEREIGNTY_GREP_EXCLUSIONS.md  WIKI_RULES.md  cloud_palace.md  index.md  log.md  retrieval_rules.md
11_Product_Insights/: Insights.md
12_Agents/: ceo_agent.md  content_agent.md  customer_success_agent.md  ea_template.md  empyrean_ceo.md  executive_assistant.md  finance_agent.md  intelligence_agent.md  lyfe_institute_ceo.md  marketing_agent.md  operations_agent.md  outreach_agent.md  personal_brand_ceo.md  portfolio_advisor.md  portfolio_agent.md  research_agent.md  sales_agent.md
12_Templates/: Client Note Properties.md  Lead Note Properties.md  Offer Note Properties.md
13_Scripts/: .env.example  agent_router.sh  agent_runner.sh  apify_scraper.py  (+34 more)
nodes/windows/: __init__.py  kokoro_server.py  pyproject.toml  requirements-windows.txt  requirements.txt  setup_windows.ps1  start_kokoro.ps1
nodes/windows/umh_desktop/: tray.py
nodes/windows/umh_node/: client.py  config.py  governance.py  metrics.py  service.py
nodes/windows/umh_node/adapters/: desktop.py  filesystem.py  shell.py
(+15211 files in other folders)
