[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "umh-node"
version = "0.1.0"
description = "UMH node mesh daemon — connects remote devices to UMH control plane"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "psutil>=5.9",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",
    "pystray>=0.19",
    "Pillow>=10.0",
    "pyautogui>=0.9",
    "pygetwindow>=0.0.9",
    "watchdog>=4.0",
]

[project.scripts]
umh-node-service = "nodes.windows.umh_node.service:main"
umh-desktop = "nodes.windows.umh_desktop.tray:main"

[tool.ruff]
line-length = 100
target-version = "py312"
